--- a/entregable/Makefile
+++ b/entregable/Makefile
@@ -2,7 +2,7 @@ export LC_ALL=C
 CXXFLAGS= -Wall -pedantic -g -ggdb
 LDFLAGS= -lpthread
 
-OBJS=main.o simu.o basetask.o tasks.o sched_rr.o sched_fcfs.o sched_rr2.o
+OBJS=main.o simu.o basetask.o tasks.o sched_rr.o sched_fcfs.o sched_rr2.o sched_lottery.o 
 MAIN=simusched
 
 .PHONY: all
@@ -17,6 +17,7 @@ main.o: main.cpp simu.h basetask.h basesched.h tasks.h sched_fcfs.h \
 sched_fcfs.o: sched_fcfs.cpp sched_fcfs.h basesched.h
 sched_rr.o: sched_rr.cpp sched_rr.h basesched.h
 sched_rr2.o: sched_rr2.cpp sched_rr2.h basesched.h
+sched_lottery.o: sched_lottery.cpp sched_lottery.h basesched.h 
 simu.o: simu.cpp simu.h basetask.h basesched.h
 simusched.o: simusched.cpp basetask.h basesched.h tasks.h
 tasks.o: tasks.cpp tasks.h basetask.h
